AM_LDFLAGS=-lexodus -L../../exodus/exodus/exodus/.libs
AM_CXXFLAGS=-I../../exodus/exodus

bin_PROGRAMS=compile createfile createindex delete deletefile deleteindex edit edic exodus_cli \
list listfiles listindexes testsort

compile_SOURCES=compile.cpp
createfile_SOURCES=createfile.cpp
createindex_SOURCES=createindex.cpp
delete_SOURCES=delete.cpp
deletefile_SOURCES=deletefile.cpp
deleteindex_SOURCES=deleteindex.cpp
edit_SOURCES=edit.cpp
edic_SOURCES=edic.cpp
exodus_cli_SOURCES=exodus_cli.cpp
list_SOURCES=list.cpp printtext.h
listfiles_SOURCES=listfiles.cpp
listindexes_SOURCES=listindexes.cpp
testsort_SOURCES=testsort.cpp
