## top directory

#error if in, warning if out
#ACLOCAL_AMFLAGS = -I m4

#Build in these directories:
SUBDIRS= $(GENERIC_LIBRARY_NAME)

#Distribute these directories:
#DIST_SUBDIRS = $(GENERIC_LIBRARY_NAME)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = exodus-10.10.pc

#EXTRA_DIST=autogen.sh
